5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_651.log
== TEST (2019-04-16 11:19:40) 
-- CODE:
#Leitura dos dados pessoais:
a = float(input("digite a altura: "))
s = input("digite o sexo (M ou F): ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == M):
	print(round(ph, 2))
else:
	print(round(pm, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:29) 
-- CODE:
#Leitura dos dados pessoais:
a = float(input("digite a altura: "))
s = input("digite o sexo (M ou F): ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:43) 
-- CODE:
#Leitura dos dados pessoais:
a = float(input("digite a altura: "))
s = input("digite o sexo (M ou F): ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:21:02) 
-- CODE:
#Leitura dos dados pessoais:
a = float(input("digite a altura: "))
s = input("digite o sexo (M ou F): ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
	
-- EXECUTION TIME:
0.130355
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:15:56) 
-- CODE:
#Leitura dos dados pessoais:
a = float(input("digite a altura: "))
s = input("digite o sexo (M ou F): ")
ph = (72.7 * a) - 58
pm = (62.1 * a) - 44.7
if(s == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
